crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__item_assistant_message_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 40
expression: roundtrip(&item)
---
{
  "type": "assistant_message",
  "content": [
    {
      "type": "text",
      "text": "let me check"
    },
    {
      "type": "reasoning",
      "text": "the user asked X"
    }
  ],
  "agent": "triage"
}
