crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__item_system_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 48
expression: roundtrip(&item)
---
{
  "type": "system",
  "content": [
    {
      "type": "text",
      "text": "you are a helpful assistant"
    }
  ]
}
