crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__item_tool_result_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 67
expression: roundtrip(&item)
---
{
  "type": "tool_result",
  "call_id": "call_abc",
  "content": [
    {
      "type": "text",
      "text": "2"
    }
  ]
}
