crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__item_user_message_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 28
expression: roundtrip(&item)
---
{
  "type": "user_message",
  "content": [
    {
      "type": "text",
      "text": "hello"
    }
  ]
}
