crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__media_source_base64_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 136
expression: roundtrip(&src)
---
{
  "type": "base64",
  "mime_type": "image/png",
  "data": "iVBORw0KGgo="
}
