crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__media_source_url_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 127
expression: roundtrip(&src)
---
{
  "type": "url",
  "url": "https://example.com/img.png"
}
