crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__session_event_assistant_message_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 347
expression: roundtrip(&ev)
---
{
  "type": "assistant_message",
  "content": [
    {
      "type": "text",
      "text": "hi back"
    }
  ],
  "agent": "triage",
  "ts": "1970-01-01T00:00:00Z"
}
