crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__session_event_compacted_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 388
expression: roundtrip(&ev)
---
{
  "type": "compacted",
  "summary": "user asked for a refund; assistant agreed",
  "original_count": 12,
  "ts": "1970-01-01T00:00:00Z"
}
