crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__session_event_handoff_occurred_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 378
expression: roundtrip(&ev)
---
{
  "type": "handoff_occurred",
  "from": "triage",
  "to": "billing",
  "ts": "1970-01-01T00:00:00Z"
}
