crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__session_event_tool_called_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 334
expression: roundtrip(&ev)
---
{
  "type": "tool_called",
  "call_id": "call_1",
  "name": "calc",
  "args": {
    "expr": "1+1"
  }
}
