crates/paigasus-helikon-core/tests/snapshots/serde_roundtrip__session_event_tool_returned_roundtrip.snap
---
source: crates/paigasus-helikon-core/tests/serde_roundtrip.rs
assertion_line: 343
expression: roundtrip(&ev)
---
{
  "type": "tool_returned",
  "call_id": "call_1",
  "content": [
    {
      "type": "text",
      "text": "2"
    }
  ]
}
